--- a/views/alumia_event_edit.ejs
+++ b/views/alumia_event_edit.ejs
@@ -17,6 +17,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <link rel="stylesheet" href="/AdminJob.css" />
     <link rel="stylesheet" href="/sidebar.css" />
     <link rel="stylesheet" href="/admin_event_edit.css" />
   </head>
@@ -26,7 +27,7 @@
 
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-md-8">
+          <div class="col-md-8 mb-5">
             <div class="card mt-5">
               <div class="card-header">
                 <h3>Edit Event Details</h3>
@@ -166,9 +167,5 @@
         </div>
       </div>
     </div>
-
-    <footer>
-      <p>&copy; 2024 AlumniConnect</p>
-    </footer>
   </body>
 </html>
