--- a/views/partials/AlumniSidebar.ejs
+++ b/views/partials/AlumniSidebar.ejs
@@ -2,7 +2,7 @@
   <div class="sidebar-header">
     <div class="logo">
       <img
-        src="../assets/images/logo_afterLogIn.png"
+        src="/logo_afterLogIn.png"
         alt="Alumni Connect Logo"
       />
     </div>
@@ -10,7 +10,7 @@
   <nav class="sidebar-nav">
     <ul>
       <li>
-        <a href="/alumni/Dashboard" class="active"
+        <a href="/alumni/dashboard" class="active"
           ><i class="fas fa-tachometer-alt"></i> Dashboard</a
         >
       </li>
