--- a/views/AlumniCreateJob.ejs
+++ b/views/AlumniCreateJob.ejs
@@ -16,121 +16,113 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <link rel="stylesheet" href="/Alumnidashboard.css" />
+    <link rel="stylesheet" href="/AdminJob.css" />
+    <link rel="stylesheet" href="/sidebarAlumni.css" />
   </head>
   <body>
     <% if (success && success.length> 0) { %>
-      <div class="alert alert-warning alert-dismissible fade show" role="alert">
-          <div>
-              <%= success %>
-          </div>
-          <div><button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <div><%= success %></div>
+      <div>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="alert"
+          aria-label="Close"
+        ></button>
       </div>
-      <% } %>
+    </div>
+    <% } %>
 
     <div class="container-fluid">
       <div class="row">
         <!-- Sidebar -->
 
-        <aside class="sidebar">
-          <div class="sidebar-header">
-            <div class="logo">
-              <img
-                src="../assets/png/logo_afterLogIn.png"
-                alt="Alumni Connect Logo"
-              />
-            </div>
-          </div>
-          <nav class="sidebar-nav">
-            <ul>
-              <li>
-                <a href="./AlumniDashboard.html" class="active"
-                  ><i class="fas fa-tachometer-alt"></i> Dashboard</a
-                >
-              </li>
-              <li>
-                <a href="/alumni/AlumniListing"><i class="fas fa-users"></i> Alumni Directory</a>
-              </li>
-              <li>
-                <a href="/alumni/job"><i class="fas fa-briefcase"></i> Jobs</a>
-              </li>
-              <li>
-                <a href="/alumni/network"><i class="fas fa-comments"></i> Networking Hub</a>
-              </li>
-              <li>
-                <a href="/alumni/event"><i class="fas fa-calendar-alt"></i> Events</a>
-              </li>
-              <li>
-                <a href=""><i class="fas fa-calendar-alt"></i>Messenger</a>
-              </li>
-              <li>
-                <a href=""><i class="fas fa-calendar-alt"></i>Donation</a>
-              </li>
-              <li>
-                <a href=""><i class="fas fa-calendar-alt"></i>Notifications</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="sidebar-footer">
-            <div class="user-info">
-              <img src="../assets/images/profilephoto.jpg" alt="User" />
-              <span>Amanda</span>
-            </div>
-            <a href="#" class="view-profile">View profile</a>
-          </div>
-        </aside>
+        <%- include("partials/AlumniSidebar.ejs") %>
 
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <div class="card mt-5">
-                        <div class="card-header">
-                            <h3>Create Job Post</h3>
-                        </div>
-                        <div class="card-body">
-                            <form method="POST" action="/alumni/newpost">
-                                <div class="form-group">
-                                    <label for="jobName">Title</label>
-                                    <input type="text" class="form-control" id="jobName" placeholder="Enter Job name"
-                                        name="title" />
-                                </div>
-                                <div class="form-group">
-                                    <label for="jobLocation">Company</label>
-                                    <input type="text" class="form-control" id="jobLocation"
-                                        placeholder="Enter company name" name="company" />
-                                </div>
-                                <div class="form-group">
-                                    <label for="jobLocation">Salary</label>
-                                    <input type="text" class="form-control" id="jobLocation"
-                                        placeholder="Enter Job salary" name="salary" />
-                                </div>
-                                <div class="form-group">
-                                    <label for="jobLocation">Location</label>
-                                    <input type="text" class="form-control" id="jobLocation"
-                                        placeholder="Enter job location" name="location" />
-                                </div>
-                                <div class="form-group">
-                                    <label for="jobDescription">Description</label>
-                                    <textarea class="form-control" id="jobDescription" rows="5"
-                                        placeholder="Enter job description" name="description"></textarea>
-                                </div>
-                                <div class="form-group">
-                                    <label for="jobImage">Image</label>
-                                    <input type="text" placeholder="URL/images..."  class="form-control-file" id="eventImage" name="image" />
-                                </div>
-                                <button type="submit" class="btn btn-primary">Save</button>
-                                <a href="adminJobListing.html" class="btn btn-secondary">Cancel</a>
-                            </form>
-                        </div>
-                    </div>
+          <div class="row justify-content-center">
+            <div class="col-md-8">
+              <div class="card mt-5">
+                <div class="card-header">
+                  <h3>Create Job Post</h3>
                 </div>
+                <div class="card-body">
+                  <form method="POST" action="/alumni/newpost">
+                    <div class="form-group">
+                      <label for="jobName">Title</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="jobName"
+                        placeholder="Enter Job name"
+                        name="title"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="jobLocation">Company</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="jobLocation"
+                        placeholder="Enter company name"
+                        name="company"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="jobLocation">Salary</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="jobLocation"
+                        placeholder="Enter Job salary"
+                        name="salary"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="jobLocation">Location</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="jobLocation"
+                        placeholder="Enter job location"
+                        name="location"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="jobDescription">Description</label>
+                      <textarea
+                        class="form-control"
+                        id="jobDescription"
+                        rows="5"
+                        placeholder="Enter job description"
+                        name="description"
+                      ></textarea>
+                    </div>
+                    <div class="form-group">
+                      <label for="jobImage">Image</label>
+                      <input
+                        type="text"
+                        placeholder="URL/images..."
+                        class="form-control-file"
+                        id="eventImage"
+                        name="image"
+                      />
+                    </div>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                    <a href="adminJobListing.html" class="btn btn-secondary"
+                      >Cancel</a
+                    >
+                  </form>
+                </div>
+              </div>
             </div>
+          </div>
         </div>
-    </div>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-
+  </body>
 </html>
