--- a/views/AlumniEditJob.ejs
+++ b/views/AlumniEditJob.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alumni Connect Job Listings</title>
-  <link
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Alumni Connect Job Listings</title>
+    <link
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
     />
@@ -17,131 +16,100 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-  <link rel="stylesheet" href="/AdminJobListings.css" />
-</head>
+    <link rel="stylesheet" href="/AdminJob.css" />
+    <link rel="stylesheet" href="/sidebarAlumni.css" />
+  </head>
 
-<body>
-  <div class="container-fluid">
-    <div class="row">
-      <!-- Sidebar -->
-      <aside class="sidebar">
-        <div class="sidebar-header">
-          <div class="logo">
-            <img src="../assets/png/logo_afterLogIn.png" alt="Alumni Connect Logo" />
-          </div>
-        </div>
-        <nav class="sidebar-nav">
-          <ul>
-            <li>
-              <a href="./AlumniDashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-            </li>
-            <li>
-              <a href="/alumni/AlumniListing"><i class="fas fa-users"></i> Alumni Directory</a>
-            </li>
-            <li>
-              <a href="/alumni/job"><i class="fas fa-briefcase"></i> Jobs</a>
-            </li>
-            <li>
-              <a href="#"><i class="fas fa-comments"></i> Networking Hub</a>
-            </li>
-            <li>
-              <a href=""><i class="fas fa-calendar-alt"></i> Events</a>
-            </li>
-            <li>
-              <a href=""><i class="fas fa-calendar-alt"></i>Messenger</a>
-            </li>
-            <li>
-              <a href=""><i class="fas fa-calendar-alt"></i>Donation</a>
-            </li>
-            <li>
-              <a href=""><i class="fas fa-calendar-alt"></i>Notifications</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="sidebar-footer">
-          <div class="user-info">
-            <img src="../assets/images/profilephoto.jpg" alt="User" />
-            <span>Amanda</span>
-          </div>
-          <a href="#" class="view-profile">View profile</a>
-        </div>
-      </aside>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <!-- Sidebar -->
+        <%- include("partials/AlumniSidebar.ejs") %>
 
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-8">
-            <div class="card mt-5">
-              <div class="card-header">
-                <h3>Edit/Add Job</h3>
-              </div>
-              <div class="card-body">
-                <form method="POST" action="/alumni/<%= allJobs._id %>?_method=PUT">
-                  <div class="form-group">
-                    <label for="jobName">Title</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="jobName"
-                      placeholder="Enter Job name"
-                      value="<%= allJobs.title %>"
-                      name="title"
-                    />
-                  </div>
-                  
-                  <div class="form-group">
-                    <label for="jobLocation">Location</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="jobLocation"
-                      placeholder="Enter job location"
-                      value="<%= allJobs.location %>"
-                      name="location"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <label for="jobLocation">Company</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="jobLocation"
-                      placeholder="Enter job location"
-                      value="<%= allJobs.company %>"
-                      name="company"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <label for="jobDescription">Description</label>
-                    <textarea
-                      class="form-control"
-                      id="jobDescription"
-                      rows="5"
-                      placeholder="Enter job description"
-                      name="description"
-                    ><%= allJobs.description %></textarea>
-                  </div>
-                  <div class="form-group">
-                    <label for="jobImage">Image</label>
-                    <input
-                      type="text"
-                      class="form-control-file"
-                      id="eventImage"
-                      placeholder="Enter URL/images..."
-                      value="<%= allJobs.image %>"
-                      name="image"
-                    />
-                  </div>
-                  <button type="submit" class="btn btn-primary">Save</button>
-                  <a href="/alumni/cancel" class="btn btn-secondary"
-                    >Cancel</a
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-md-8">
+              <div class="card mt-5">
+                <div class="card-header">
+                  <h3>Edit/Add Job</h3>
+                </div>
+                <div class="card-body">
+                  <form
+                    method="POST"
+                    action="/alumni/<%= allJobs._id %>?_method=PUT"
                   >
-                </form>
+                    <div class="form-group">
+                      <label for="jobName">Title</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="jobName"
+                        placeholder="Enter Job name"
+                        value="<%= allJobs.title %>"
+                        name="title"
+                      />
+                    </div>
+
+                    <div class="form-group">
+                      <label for="jobLocation">Location</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="jobLocation"
+                        placeholder="Enter job location"
+                        value="<%= allJobs.location %>"
+                        name="location"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="jobCompany">Company</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="jobCompany"
+                        placeholder="Enter job company"
+                        value="<%= allJobs.company %>"
+                        name="company"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="jobDescription">Description</label>
+                      <textarea
+                        class="form-control"
+                        id="jobDescription"
+                        rows="5"
+                        placeholder="Enter job description"
+                        name="description"
+                      >
+<%= allJobs.description %></textarea
+                      >
+                    </div>
+                    <div class="form-group">
+                      <label for="jobImage">Image</label>
+                      <input
+                        type="text"
+                        class="form-control-file"
+                        id="jobImage"
+                        placeholder="Enter URL/images..."
+                        value="<%= allJobs.image %>"
+                        name="image"
+                      />
+                    </div>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                    <a href="/alumni/cancel" class="btn btn-secondary"
+                      >Cancel</a
+                    >
+                  </form>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <!-- Close row div here -->
     </div>
+    <!-- Close container-fluid div here -->
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
