minor changes to all home pages

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -54,7 +54,10 @@
         <h2>Featured Alumni Who Landed Their Dream Jobs</h2>
         <div class="alumni-cards">
           <div class="card">
-            <img src="../assets/images/alumni.jpg" alt="Emily Chen" />
+            <img
+              src="../assets/images/alumni.jpg"
+              alt="Emily Chen"
+            />
             <h3>Emily Chen</h3>
             <p>
               Emily Chen turned her passion for coding into a career at a
