--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,7 +10,7 @@
   <div class="footer-content">
     <div class="footer-logo">
       <img
-        src="../assets/images/logo_afterLogIn.png"
+        src="/logo_afterLogIn.png"
         alt="AlumniConnect Logo"
       />
     </div>
