--- a/public/home.css
+++ b/public/home.css
@@ -20,6 +20,12 @@ header {
     /* Prevents the image from repeating */
 }
 
+a:hover {
+    text-decoration: none;
+    color: white;
+
+}
+
 .auth-buttons {
     display: flex;
     gap: 10px;
@@ -34,7 +40,7 @@ header {
 }
 
 .hero {
-    max-width: 600px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 200px;
 }
@@ -99,7 +105,7 @@ h2 {
 
 
 .card img {
-    width: 350px;
+    width: 300px;
     height: 300px;
     border-radius: 5px;
     object-fit: cover;
@@ -115,7 +121,7 @@ h2 {
 }
 
 .alumni-cards .card img {
-    width: 350px;
+    width: 300px;
     height: 500px;
     border-radius: 5px;
     object-fit: cover;
