--- a/views/Events.ejs
+++ b/views/Events.ejs
@@ -17,6 +17,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <!-- Custom CSS -->
+    
+    <link rel="stylesheet" href="/home.css" />
     <link rel="stylesheet" href="/Events.css" />
     <link rel="stylesheet" href="/navbar.css" />
     <link rel="stylesheet" href="/footer.css" />
