--- a/views/UserJobView.ejs
+++ b/views/UserJobView.ejs
@@ -17,62 +17,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <link rel="stylesheet" href="/UserView.css" />
+    <link rel="stylesheet" href="/sidebarUser.css" />
   </head>
 
   <body>
     <div class="container-fluid"></div>
     <div class="row">
       <!-- Sidebar -->
-      <aside class="sidebar">
-        <div class="sidebar-header">
-          <div class="logo">
-            <img
-              src="../assets/png/logo_afterLogIn.png"
-              alt="Alumni Connect Logo"
-            />
-          </div>
-        </div>
-        <nav class="sidebar-nav">
-          <ul>
-            <li>
-              <a href="/user/dashboard" class="active"
-                ><i class="fas fa-tachometer-alt"></i>Dashboard</a
-              >
-            </li>
-            <li>
-              <a href="/user/Directory"
-                ><i class="fas fa-users"></i>Alumni Directory</a
-              >
-            </li>
-            <li>
-              <a href="/user/job"
-                ><i class="fas fa-briefcase"></i>Job Postings</a
-              >
-            </li>
-            <li>
-              <a href="/user/forum"
-                ><i class="fas fa-comments"></i> Networking Hub</a
-              >
-            </li>
-            <li>
-              <a href=""><i class="fas fa-calendar-alt"></i>Upcoming Events</a>
-            </li>
-            <li>
-              <a href=""><i class="fas fa-calendar-alt"></i>Messenger</a>
-            </li>
-            <li>
-              <a href=""><i class="fas fa-calendar-alt"></i>Notifications</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="sidebar-footer">
-          <div class="user-info">
-            <img src="../assets/images/profilephoto.jpg" alt="User" />
-            <span>Amanda</span>
-          </div>
-          <a href="#" class="view-profile">View profile</a>
-        </div>
-      </aside>
+      <%- include("partials/UserSidebar.ejs") %>
 
       <div class="container">
         <header>
@@ -93,10 +45,6 @@
           <p id="salary"><b>Industry</b> : <%= Data.industry %></p>
           <p id="posted-date"><b>JobType</b> : <%= Data.jobType %></p>
         </div>
-
-        <footer>
-          <p>&copy; 2024 Alumni Connect</p>
-        </footer>
       </div>
     </div>
   </body>
