--- a/views/partials/UserSidebar.ejs
+++ b/views/partials/UserSidebar.ejs
@@ -2,7 +2,7 @@
   <div class="sidebar-header">
     <div class="logo">
       <img
-        src="../assets/images/logo_afterLogIn.png"
+        src="/logo_afterLogIn.png"
         alt="Alumni Connect Logo"
       />
     </div>
@@ -40,7 +40,7 @@
   </nav>
   <div class="sidebar-footer">
     <div class="user-info">
-      <img src="../assets/images/mayapatel.jpg" alt="User" />
+      <img src="/mayapatel.jpg" alt="User" />
       <span>Maya</span>
       <a href="#" class="view-profile"><i class="fas fa-cog"></i></a>
     </div>
