--- a/views/AlumniEvent.ejs
+++ b/views/AlumniEvent.ejs
@@ -36,7 +36,9 @@
           </form>
         </header>
 
-        <section class="events-grid"></section>
+        <section class="events-grid">
+          
+        </section>
       </main>
     </div>
   </body>
