--- a/views/detail_event.ejs
+++ b/views/detail_event.ejs
@@ -68,7 +68,9 @@
             <span class="event-status"> <%= data.Status %></span>
           </p>
           <form action="/<%= data.title %>/get_form">
-            <button id="submit_event" class="btn btn-primary px-5">Apply</button>
+            <button id="submit_event" class="btn btn-primary px-5">
+              Apply
+            </button>
           </form>
         </div>
       </section>
