--- a/views/job.ejs
+++ b/views/job.ejs
@@ -16,8 +16,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    
-    <link rel="stylesheet" href="/home.css" />
+
+    <!-- <link rel="stylesheet" href="/home.css" /> -->
     <link rel="stylesheet" href="/job.css" />
     <link rel="stylesheet" href="/navbar.css" />
     <link rel="stylesheet" href="/footer.css" />
@@ -30,7 +30,7 @@
         <div class="hero-content">
           <h1>Remote Jobs</h1>
           <p>Join our community of remote workers today!</p>
-          <a href="" class="cta-button">Sign Up</a>
+          <a href="/signup" class="cta-button">Sign Up</a>
         </div>
       </div>
     </header>
