--- a/views/networkinghub.ejs
+++ b/views/networkinghub.ejs
@@ -34,7 +34,7 @@
         <div class="hero-content">
           <h2>Join the Conversation</h2>
           <p>Ask a Question or Share an Update</p>
-          <a href="/home/temp">
+          <a href="/signup">
             <button class="create-post-btn">Create Post</button></a
           >
         </div>
