--- a/public/detail_event.css
+++ b/public/detail_event.css
@@ -36,6 +36,9 @@ main {
     width: 100%;
     height: auto;
     border-bottom: 1px solid #ddd;
+    object-fit: cover;
+    object-position: center;
+
 }
 
 .event-info {
