--- a/views/Events.ejs
+++ b/views/Events.ejs
@@ -17,7 +17,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <!-- Custom CSS -->
-    
+
     <link rel="stylesheet" href="/home.css" />
     <link rel="stylesheet" href="/Events.css" />
     <link rel="stylesheet" href="/navbar.css" />
@@ -32,7 +32,7 @@
       <div class="hero-content">
         <h1 class="display-4">Upcoming Events</h1>
         <p class="lead">Reconnect with fellow alumni at our upcoming events.</p>
-        <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+        <a href="/signup" class="btn btn-primary btn-lg">Learn More</a>
       </div>
     </div>
 
@@ -71,7 +71,7 @@
       <div class="row g-4">
         <% for(data of result){ %>
         <!-- Engineering Summit -->
-        <div class="col-md-6 col-lg-3">
+        <div class="col-md-4 col-lg-6">
           <div class="card h-100">
             <img
               src="<%= data.image %>"
@@ -91,6 +91,8 @@
         <% } %>
       </div>
     </section>
+
+    <%- include("partials/footer.ejs") %>
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
