--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,7 +44,7 @@
             <h3><%=event.title %></h3>
             <p>Date:<%= event.date %>,Time:<%= event.time %></p>
             <p>location:<%= event.location %></p>
-            <a href="/home/temp" class="register-button">Learn More</a>
+            <a href="/signup" class="register-button">Learn More</a>
           </div>
           <% i++; %> <% } %>
         </div>
@@ -76,7 +76,7 @@
             </p>
           </div>
           <div class="card">
-            <img src="../assets/images/mayapatel.jpg" alt="Maya Patel" />
+            <img src="/mayapatel.jpg" alt="Maya Patel" />
             <h3>Maya Patel</h3>
             <p>
               Maya Patel established her architectural firm and won numerous
